fix for bug #349286:  All Tabs button wider during overflow on winstripe. additionally, the dropmarker in the All Tabs button needs to be centered (for both winstripe and pinstripe)
fix for bug #349287:  Color leak during hover on All Tabs menu in overflow state.  This was fixed by modifying the images, ui-r=beltzner

r/a=mconnor

--- a/mozilla/toolkit/themes/pinstripe/global/browser.css
+++ b/mozilla/toolkit/themes/pinstripe/global/browser.css
@@ -342,6 +342,10 @@ tabbrowser > tabbox > tabpanels {
   display: none;
 }
 
+.tabs-alltabs-button > .toolbarbutton-icon {
+  -moz-margin-end: 2px;
+}
+
 .tabs-alltabs-button:hover{
   background-image: url("chrome://global/skin/alltabs-box-bkgnd.png");
   background-repeat: no-repeat;
